@@ -56,5 +56,23 @@
 		<textarea id="disabled_filled_textarea" disabled="disabled">BBB</textarea>
 		
 		<textarea id="hidded_filled_textarea" hidden="true">BBB</textarea>
+		
+		<br/><br/>
+		<form>
+			<input type="checkbox" name="enabled_nonselected_checkbox" value="Bike">I have a bike&nbsp;&nbsp;
+			<input type="checkbox" name="enabled_nonselected_checkbox" value="Car">I have a car
+		</form>
+		<form>
+			<input type="checkbox" name="enabled_preselected_checkbox" value="Bike">I have a bike&nbsp;&nbsp;
+			<input type="checkbox" name="enabled_preselected_checkbox" value="Car" checked="checked">I have a car
+		</form>
+		<form>
+			<input type="checkbox" name="disabled_preselected_checkbox" value="Bike" disabled="disabled">I have a bike&nbsp;&nbsp;
+			<input type="checkbox" name="disabled_preselected_checkbox" value="Car" checked="checked" disabled="disabled">I have a car
+		</form>
+		<form>
+			<input type="checkbox" name="hidden_preselected_checkbox" value="Bike" hidden="true">I have a bike&nbsp;&nbsp;
+			<input type="checkbox" name="hidden_preselected_checkbox" value="Car" checked="checked" hidden="true">I have a car
+		</form>
 	</body>
 </html>
